# RiscV_OAC

./: CMakeLists.txt  PC.cpp  PC.hpp  adder.cpp  adder.hpp  alu.cpp  alu.hpp  aluControl.cpp  aluControl.hpp  control.cpp  control.hpp  dataMem.cpp  dataMem.hpp  immGen.cpp  immGen.hpp  instructionMem.cpp  instructionMem.hpp  instructionMemory.cpp  instructionMemory.hpp  main.cpp  mux.cpp  mux.hpp  processador.cpp  processador.hpp  registers.cpp  registers.hpp  vm.cpp  vm.hpp
